# icanhaskell

./: icanhaskell.cabal
src/: Main.hs  Parser.hs
