name:           icanhaskell
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         gintas

executable icanhaskell
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   parsec >=3.1.5 && <3.2
  ghc-options:     -Wall
  other-modules:   Parser

